# kubevirt

./: BUILD.bazel  build.sh  deploy.sh  tdx-repo.yaml
cmd/qgs-launcher/: BUILD.bazel  entrypoint.sh  qcnl.conf  qgs.conf
hack/: bazel-push-images.sh  bootstrap.sh  build-manifests.sh  cluster-patch.sh  generate.sh  parse-shasums.sh  rpm-deps.sh
pkg/util/: amd64.go
pkg/virt-config/: feature-gates.go
pkg/virt-controller/services/: renderresources.go  rendervolumes.go  template.go
pkg/virt-handler/: vm.go
pkg/virt-handler/device-manager/: device_controller.go
pkg/virt-operator/: kubevirt_test.go
pkg/virt-operator/resource/apply/: apps_test.go
pkg/virt-operator/resource/generate/components/: daemonsets.go  deployments.go
pkg/virt-operator/resource/generate/csv/: csv.go
pkg/virt-operator/resource/generate/install/: strategy.go
pkg/virt-operator/util/: config.go
tools/csv-generator/: csv-generator.go
tools/manifest-templator/: manifest-templator.go
tools/util/: marshaller_test.go
