load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_image",
)
load("@rules_pkg//:pkg.bzl", "pkg_tar")

pkg_tar(
    name = "qgsconf",
    srcs = [":qgs.conf"],
    mode = "0600",
    package_dir = "/etc",
)

pkg_tar(
    name = "qcnlconf",
    srcs = [":qcnl.conf"],
    mode = "0600",
    package_dir = "/etc",
)

pkg_tar(
    name = "entrypoint",
    srcs = [":entrypoint.sh"],
    mode = "0700",
    package_dir = "/",
)

container_image(
    name = "version-container",
    base = "//:passwd-image",
    directory = "/",
    files = [
        "//:get-version",
    ],
    tars = select({
        "//conditions:default": [
            ":qgsconf",
            ":qcnlconf",
            ":entrypoint",
            "//rpm:qgs-launcher_x86_64",
        ],
    }),
)

container_image(
    name = "qgs-launcher-image",
    architecture = select({
        "//conditions:default": "amd64",
    }),
    base = ":version-container",
    directory = "/",
    entrypoint = ["/usr/bin/qgs"],
    visibility = ["//visibility:public"],
)
